fixed layout issues

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -17,11 +17,16 @@
 }
 
 .page {
-  width: 100%;
-  max-width: 100%; 
-  margin: 0 auto;   // centers if width < 100%
-  padding-left: 10px;
-  padding-right: 10px;
+  margin-bottom: 2em;
+
+  @include breakpoint($medium) {
+    @include span(12 of 12);
+  }
+
+  @include breakpoint($large) {
+    @include span(10 of 12 last);
+    @include prefix(0.5 of 12);
+  }
 
   .page__inner-wrap {
     width: 100%;
